argocd/apps/adguard-home/resources/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  name: adguard-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  serviceName: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
      - name: adguard-home
        image: adguard/adguardhome:latest
        ports:
        - containerPort: 5300
          name: dns-udp
          protocol: UDP
        - containerPort: 5300
          name: dns-tcp
          protocol: TCP
        - containerPort: 8530
          name: dns-quic
          protocol: UDP
        - containerPort: 8530
          name: dns-tls
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 4430
          name: https
          protocol: TCP
        - containerPort: 4430
          name: dns-over-https
          protocol: UDP
        - containerPort: 3000
          name: http-setup
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: certs
          mountPath: /opt/adguardhome/certs
        - name: conf
          mountPath: /opt/adguardhome/conf
        - name: data
          mountPath: /opt/adguardhome/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: adguard-home
      - name: certs
        secret:
          secretName: adguard-home
      - name: conf
        emptyDir: {}
      - name: initial-config
        configMap:
          name: adguard-home
      - name: scripts
        configMap:
          name: scripts
          defaultMode: 268
      - name: static-clients
        secret:
          secretName: static-clients
