argocd/apps/adguard-home/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-tcp
spec:
  type: LoadBalancer
  selector:
    app: adguard-home
  ports:
  - protocol: TCP
    port: 53
    targetPort: 5300
    name: dns-tcp
  - protocol: TCP
    port: 853
    targetPort: 8530
    name: dns-tls
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-udp
spec:
  type: LoadBalancer
  selector:
    app: adguard-home
  ports:
  - protocol: UDP
    port: 53
    targetPort: 5300
    name: dns-udp
  externalTrafficPolicy: Local
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-admin
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
